Done remove meeting button in meeting's file. Little refactoring. Fixed filtered meetings cards horizontal scroll.

--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -28,7 +28,7 @@
 }
 .scrollable {
   overflow-y: scroll !important;
-  overflow-x: hidden !important;
+  overflow-x: scroll !important;
 }
 .overflow-hidden {
   overflow-y: hidden;
